# src/controllers/CartController.js
@@ -1,5 +1,6 @@
 const Cart = require('../modules/cart')
 const Plant = require('../modules/plants')
+// const Order = require ('../modules/order')
 //add - delete 
 const functionCart= require('../middleware/function')
 const { forEach } = require('lodash')
@@ -18,28 +19,29 @@ class CartController{
     }
 
     async addcart (req,res){
-            // console.log(idcart);
+            // console.log(req.user);
+            // console.log(req.body);
             const plant = req.body;
+            // console.log(req.user);
             const cart = await Cart.findOne({userId:req.user})
+            // console.log(cart);
             const plantInf = await Plant.findById(plant.plantId);
-            if(plantInf.quantity <  plant.quantity){ //bad quantity request 
-                return  res.send('fail to order!');
+            // console.log(plantInf);
+            if(plantInf.quantity <=  plant.quantity){ //bad quantity request 
+                return  res.send('order to many plants! fail to order! ');
             }
+            console.log(cart.plants.length);
             if(!cart.plants.length){//check if cart are empty
                 console.log('this cart is empty and about to add first plant');
-                functionCart.add(cart,plant,plantInf);   
-                await Cart.findByIdAndUpdate(cart._id,cart)
+                functionCart.add(cart,plant,plantInf);
                 return res.send(cart);
-            }
+            } 
             const pos = functionCart.findpos(cart,plant);
-            // console.log(pos);
             if(pos < 0 ){
                   console.log('this old cart is going to add a new plant');
-                  functionCart.add(cart,plant,plantInf);
-                  await Cart.findByIdAndUpdate(cart._id,cart)
+                  functionCart.add(cart,plant,plantInf);                  
                     return res.send(cart);   
                 }
-            
             // console.log(cart.plants[pos].quantity);
             if(plantInf.quantity <= cart.plants[pos].quantity + plant.quantity){
                 return res.send('fail to order!');
@@ -47,11 +49,11 @@ class CartController{
             console.log('this old cart is going to update plant');
             cart.plants[pos].quantity +=  plant.quantity;
             cart.plants[pos].price = plantInf.price;
-            cart.plants[pos].discount = plantInf.discount;       
-            await Cart.findByIdAndUpdate(cart._id,cart)  
+            cart.plants[pos].discount = plantInf.discount;     
+            functionCart.ordercheck(cart) 
             res.status(200).json(cart);   
     }
-
+    
     async updateCart(req,res){
         try{
             const cart = await Cart.findOne({userId:req.user});
@@ -61,8 +63,7 @@ class CartController{
             res.status(200).json(cart);
         }catch(err){
             res.status(403).json({message: err.message})
-        }
-          
+        }          
     }
 
 
